@@ -1,4 +1,4 @@
-/* Copyright (c) 2021-2022, RTE (http://www.rte-france.com)
+/* Copyright (c) 2021-2023, RTE (http://www.rte-france.com)
  * See AUTHORS.txt
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -60,7 +60,7 @@ public class DevicesService {
     }
 
     public List<Device> getDevices() {
-        return devices.values().stream().collect(Collectors.toList());
+        return devices.values().stream().toList();
     }
 
     public void enableDevice(String deviceId)
@@ -130,7 +130,7 @@ public class DevicesService {
     private boolean isDriverStillConnectedToADevice(String driverId) {
         List<Device> devicesConnectedToDriver = devices.values().stream()
                 .filter(device -> getDriverIdFromDevice(device).equals(driverId))
-                .collect(Collectors.toList());
+                .toList();
         return  (!devicesConnectedToDriver.isEmpty());
     }
 
